# misc

./: .gitignore  Cargo.toml  README.md  links.txt  owned.csv
.github/workflows/: badge_inventory.yml  boatinfo_downloader.yml  coding_bat_exporter.yml  dad_bot.yml  distant_locations.yml  duckchat.yml  grade_history.yml  pdf_splitter.yml  soon.yml  spotify_stats.yml  study.yml  test_score_scraper.yml  tgm_metadetector.yml  unit_convert.yml  world-wide-west.yml  world_wide_west.yml
AutoHotkey/: functionKeys.ahk
Display/: setDisplaySize.sh
Github/: ezHash.py
Other/badge_inventory/: dedup.txt  owned-full.csv  result.txt
Other/badge_inventory/src/: badge.rs  generate.rs  main.rs  misc.rs  report.rs  template.md
Other/badge_inventory/src/templates/: report.md
Other/coding_bat_exporter/: Cargo.toml
Other/coding_bat_exporter/src/: main.rs
Other/world-wide-west/: .gitignore  Cargo.toml
Scripts/: README.md  screenshot_stats.jl  setTimeData.sh  vector.c
Scripts/fotd.koplugin/: _meta.lua  main.lua
Scripts/learning_c/: guess_game.c  guess_solver.c  guessing.h  word_count.c
Video/: batchFFMPEG.py
audio_volume/: Cargo.toml
audio_volume/src/: main.rs
badge_inventory/: .gitignore  Cargo.toml  README.md  convert.sh  issues.txt  owned.csv
badge_inventory/src/: generate.rs  misc.rs  report.rs
badge_inventory/src/templates/: discontinued.md  outdated.md
boatinfo_downloader/: Cargo.toml  README.md  counts.jl  search.txt
boatinfo_downloader/src/: boat_info.rs  main.rs
coding_bat_exporter/: Cargo.toml  README.md
coding_bat_exporter/src/: case.rs  main.rs  types.rs
dad_bot/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
dad_bot/src/: bot.rs  consts.rs  database.rs  main.rs  misc.rs
dad_bot/src/commands/: mod.rs  top_dads.rs
dad_bot/src/sql/: create_dadable.sql  create_dads.sql
distant_locations/: Cargo.toml
distant_locations/src/: geocode.rs  main.rs
duckchat/: Cargo.toml
duckchat/src/: main.rs
grade_history/: Cargo.toml  README.md
grade_history/src/: main.rs
particle_sim/: Cargo.toml  README.md
particle_sim/src/: main.rs
pdf_splitter/: Cargo.toml  README.md
pdf_splitter/src/: args.rs  main.rs  pdf.rs  splitter.rs
projectile_sim/: Cargo.toml
projectile_sim/src/: main.rs
scripts/: README.md  ezHash.py  stat.free42  video-presenter.lua
scripts/learning_c/: guessing.c  unit_convert.c
scripts/seven-segments/: bcd.py  dec-basic.py  dec.py  hex.py
soon/: Cargo.toml  README.md
soon/src/: lib.rs  safety.rs  test.rs
spotify_stats/: .gitignore  Cargo.toml  README.md  spotify_liked_songs.jl
spotify_stats/src/: main.rs
src/: app.rs  card.rs  completer.rs  database.rs  download.rs  main.rs  process.rs  template.md
src/checkers/: mod.rs  smodin.rs  writer.rs  zerogpt.rs
src/sql/: create_completions.sql
study/: README.md  data.txt
study/src/: card.rs  main.rs  set.rs
test_score_scraper/: Cargo.toml  README.md  statistics.jl
test_score_scraper/src/: main.rs
text_gen/: Cargo.toml
text_gen/src/: main.rs
tgm_metadetector/: Cargo.toml  README.md  tgm_detection.jl
tgm_metadetector/data/: me.txt  tgm.txt
tgm_metadetector/src/: main.rs
tgm_metadetector/src/checkers/: content_at_scale.rs  zerogpt.rs
unfocused_advance/: Cargo.toml
unfocused_advance/src/: main.rs
unit_convert/: Cargo.toml  todo.md
unit_convert/benches/: benchmark.rs
unit_convert/src/: dimension.rs  dimensional_analysis.rs  input.rs  lib.rs  main.rs  misc.rs  prefix.rs  test.rs
unit_convert/src/units/: duration.rs  length.rs  mass.rs  mod.rs  time.rs
wave_sim/: Cargo.toml
wave_sim/src/: main.rs  simulation.rs  video.rs
world-wide-west/: Cargo.toml
world_wide_west/: Cargo.toml  README.md
world_wide_west/src/: app.rs  database.rs  main.rs  path_normalizer.rs
world_wide_west/src/completer/: mod.rs  open_ai.rs
world_wide_west/src/sql/: create_completions.sql
youtube_stats/: .gitignore  Cargo.toml  README.md  process.jl
youtube_stats/src/: api.rs  history.rs  main.rs
