[workspace]
resolver = "2"
members = [
    "audio_volume",
    "badge_inventory",
    "boatinfo_downloader",
    "coding_bat_exporter",
    "dad_bot",
    "pdf_splitter",
    "soon",
    "spotify_stats",
    "study",
    "test_score_scraper",
    "tgm_metadetector",
    "world_wide_west",
    "youtube_stats",
]
