[workspace]
resolver = "2"
members = [
    "audio_volume",
    "badge_inventory",
    "boatinfo_downloader",
    "coding_bat_exporter",
    "dad_bot",
    "grade_history",
    "particle_sim",
    "pdf_splitter",
    "projectile_sim",
    "soon",
    "spotify_stats",
    "study",
    "test_score_scraper",
    "text_gen",
    "tgm_metadetector",
    "unfocused_advance",
    "world_wide_west",
    "youtube_stats"
]
