[package]
name = "boatinfo_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
csv = "1.2.2"
indicatif = { version = "0.17.6", features = ["rayon"] }
minreq = { version = "2.8.1", features = ["json-using-serde", "https-native"] }
rayon = "1.7.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
ureq = { version = "2.7.1", features = ["json", "native-tls"] }
