[package]
name = "dad_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
