[package]
name = "distant_locations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"
clap = { version = "4.5.18", features = ["derive"] }
geocoding = "0.4.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
