[package]
name = "pdf_splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
indicatif = { version = "0.17.6", features = ["rayon"] }
lopdf = "0.31.0"
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.9.5"
