[package]
name = "spotify_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
once_cell = "1.18.0"
rayon = "1.7.0"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
