[package]
name = "tgm_metadetector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
indicatif = "0.17.6"
rustyline = "12.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
ureq = { version = "2.7.1", features = ["json"] }
