[package]
name = "unit_convert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
hashbrown = "0.14.1"
identconv = "0.2.0"
once_cell = "1.18.0"
regex = "1.9.6"
thousands = "0.2.0"

[lib]
name = "unit_convert"
path = "src/lib.rs"

[[bin]]
name = "unit_convert"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
approx = "0.5.1"
paste = "1.0.14"

[[bench]]
name = "benchmark"
harness = false
