[package]
name = "world_wide_west"
authors = ["Connor Slade"]
version = "0.1.0"
edition = "2021"

[dependencies]
afire = { version = "2.0.0", features = ["tracing", "extensions"] }
anyhow = "1.0.70"
serde_json = "1.0.96"
ureq = { version = "2.6.2", features = ["json"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
