[package]
edition = "2021"
name = "coding_bat_exporter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.17", features = ["derive"]}
colored = "2.0.0"
indicatif = "0.17.1"
lazy_static = "1.4.0"
scraper = "0.13.0"
serde_json = "1.0.87"
ureq = {version = "2.5.0", features = ["cookies"]}
